# pyCHomP2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  pyproject.toml  setup.py
.github/workflows/: publish_pypi.yml  wheels_build_publish.yml  wheels_build_test.yml
doc/: 2018-03-16-SimplicialFlowExample.ipynb  2D_Braids_Example.ipynb  8D_Braids_Example.ipynb  Tutorial.ipynb
examples/: 2018-03-16-SimplicialFlowExample.ipynb  2D_Braids_Example.ipynb  8D_Braids_Example.ipynb
src/pychomp/: Braids.py  CondensationGraph.py  CubicalHomology.py  DirectedAcyclicGraph.py  DirectedGraph.py  FlowGradedComplex.py  InducedSubgraph.py  StronglyConnectedComponents.py  TransitiveClosure.py  TransitiveReduction.py  __init__.py
src/pychomp2/: Braids.py  CondensationGraph.py  CubicalHomology.py  DirectedAcyclicGraph.py  FlowGradedComplex.py  InducedSubgraph.py  Poset.py  TransitiveClosure.py  TransitiveReduction.py  __init__.py
tests/: test_basic.py
