[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "pychomp2"
version = "1.1.0"
description = "CHomP (Computational Homology Project) Python Extension"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Marcio Gameiro", email = "marciogameiro@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
  "graphviz>=0.20",
  "matplotlib>=3.6.0",
  "numpy>=1.23.0",
  "scipy>=1.11.4",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Programming Language :: C++",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/marciogameiro/pyCHomP2"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/pychomp"]
build-dir = "build/{wheel_tag}"
cmake.args = [
  "-DCMAKE_PROJECT_PATH='src/pychomp/_chomp'",
]

[tool.cibuildwheel]
# build-frontend = "build[uv]"
test-command = "pytest {project}/tests"
test-extras = ["test"]
